load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dumpstdlibast.go"],
    importpath = "github.com/sh0rez/go-jsonnet/cmd/dumpstdlibast",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/dump:go_default_library",
        "//internal/program:go_default_library",
    ],
)

go_binary(
    name = "dumpstdlibast",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
